--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Sep 15 13:05:42 EDT 2018
-sdk.dir=/Users/chirayugarg/Library/Android/sdk
+sdk.dir=C\:\\Users\\justi\\AppData\\Local\\Android\\Sdk
