--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 15 13:05:42 EDT 2018
-sdk.dir=C\:\\Users\\justi\\AppData\\Local\\Android\\Sdk
+#Sun Sep 16 01:39:36 EDT 2018
+sdk.dir=C\:\\Users\\rhyth\\AppData\\Local\\Android\\Sdk
