--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.belemy.helloworld_hackathon">
-    <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,13 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
         <activity android:name=".Questions_Activity" />
         <activity android:name=".time_Activity" />
         <activity android:name=".areyouReady" />
         <activity android:name=".letsGo" />
         <activity android:name=".Questions" />
-        <activity android:name=".Score" />
         <activity android:name=".correct" />
         <activity android:name=".wrong" />
         <activity android:name=".first">
@@ -27,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Score"></activity>
     </application>
 
 </manifest>
