--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 15 22:48:53 EDT 2018
-sdk.dir=/Users/chirayugarg/Library/Android/sdk
+#Mon Apr 20 23:51:14 EDT 2020
+sdk.dir=C\:\\Users\\Rhythm\\AppData\\Local\\Android\\Sdk
